Center image and add new infomation

--- a/portfolio/static/portfolio/portfolio.css
+++ b/portfolio/static/portfolio/portfolio.css
@@ -2,6 +2,16 @@
   text-transform: uppercase;
 }
 
-.img-center {
-    text-align: center;
+.img-container {
+  height: 520px;
+  position: relative;
+}
+
+.center {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
