--- a/portfolio/templates/portfolio/home.html
+++ b/portfolio/templates/portfolio/home.html
@@ -32,10 +32,12 @@
     <hr>
     <!-- Teachers -->
     <h2 class="my-4">Guru Mata Pelajaran Asas Sains Komputer</h2>
-    <!-- Project One -->
+    <!-- Teacher One -->
     <div class="row">
-        <div class="col-md-7 img-center">
-            <img class="img-fluid rounded mb-3 mb-md-0" src="{% static 'images/mariatie.png' %}" width="370px" height="370px" alt="">
+        <div class="col-md-7 img-container">
+            <div class="center">
+                <img class="img-fluid rounded mb-3 mb-md-0" src="{% static 'images/mariatie.jpg' %}" alt="">
+            </div>
         </div>
         <div class="col-md-5">
             <h3 class="cap">Pn. Mariatie binti Sidek</h3>
@@ -61,12 +63,48 @@
                     <p class="cap"><strong>Pencapaian PT3 2019 (Kohort 1)</strong></p>
                 </div>
                 <div class="col">
-                    <p>35/44 CALON MENDAPAT GRED A</p>
+                    <p>35/44 calon mendapat gred A</p>
                 </div>
             </div>
         </div>
     </div>
     <hr>
+    <!-- Teacher Two -->
+    <div class="row">
+        <div class="col-md-7 img-container">
+            <div class="center">
+            <img class="img-fluid rounded mb-3 mb-md-0" src="{% static 'images/rusyawati.jpg' %}" alt="">
+            </div>
+        </div>
+        <div class="col-md-5">
+            <h3 class="cap">Pn. Rusyawati binti Abd. Manaf</h3>
+            <p>Guru opsyen Teknologi Maklumat yang mengajar selama 3 tahun dalam Asas Sains Komputer Tingkatan 1 dan 3. Beliau merupakan seorang guru yang sabar, penyayang dan berpengetahuan dalam. Keperibadiannya yang berdedikasi dalam pengajaran telah mempimpin beratus-ratusan pelajar untuk menerusi pelajaran dalam Sains Komputer semasa Tingkatan 4.</p>
+            <div class="row">
+                <div class="col">
+                    <p class="cap"><strong>Pencapaian Akademik</strong></p>
+                </div>
+                <div class="col">
+                    <p>Ijazah Sarjana Muda Teknologi Maklumat (Sains Maklumat) (UKM)</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <p class="cap"><strong>Kelulusan Ikhtisas</strong></p>
+                </div>
+                <div class="col">
+                    <p>Diploma Pendidikan Teknologi Maklumat (USM)</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <p class="cap"><strong>Pencapaian PT3 2019 (Kohort 1)</strong></p>
+                </div>
+                <div class="col">
+                    <p>35/44 calon mendapat gred A</p>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- Footer-->
     <footer class="bg-light py-3">
         <div class="container">
