--- a/quiz/templates/quiz/base.html
+++ b/quiz/templates/quiz/base.html
@@ -13,60 +13,68 @@
                 <div class="question bg-white p-3 border-bottom">
                     <!-- Quiz Title -->
                     <div class="d-flex flex-row justify-content-between align-items-center mcq">
-                        <h4>{{ quiz_name }}</h4><span>({{ pager_now }} daripada {{ page_total }})</span>
+                        <h4>Kuiz {{ quiz_name }}</h4><span>({{ page_now }} daripada {{ page_total }})</span>
                     </div>
                 </div>
                 <form class="question bg-white p-3 border-bottom" id="q_form" method="POST">
                     {% csrf_token %}
+                    <input name="page" type="hidden" value="{{ page_now }}"/>
+                    <input name="qn_id" type="hidden" value="{{ question.qn_id }}"/>
+                    <input name="qn_seed" type="hidden" value="{{ qn_seed }}"/>
+                    <input name="opt_seed" type="hidden" value="{{ opt_seed }}"/>
                     <div class="d-flex flex-row align-items-center question-title">
                         <h3 class="text-danger">S{{ page_now }}.</h3>
-                        <h5 class="mt-1 ml-2">{{ question }}</h5>
+                        <h5 class="mt-1 ml-2">{{ question.statement }}</h5>
                     </div>
-                    <fieldset id="option_group">
+                    <fieldset id="user_opt">
                         <div class="ans ml-2">
-                            <label class="radio"> <input name="option_group" type="radio" value="{{ op1 }}">
-                                <span>A. {{ op1 }}</span>
+                            <label class="radio">
+                                <input id="opt1" name="user_opt" type="radio" value="opt1" {{ status }} {{ opt1_selected }}/>
+                                <span>A. {{ question.opt1 }}</span>
                             </label>
                         </div>
                         <div class="ans ml-2">
-                            <label class="radio"> <input name="option_group" type="radio" value="{{ op2 }}">
-                                <span>B. {{ op2 }}</span>
+                            <label class="radio">
+                                <input id="opt2" name="user_opt" type="radio" value="opt2" {{ status }} {{ opt2_selected }}/>
+                                <span>B. {{ question.opt2 }}</span>
                             </label>
                         </div>
                         <div class="ans ml-2">
-                            <label class="radio"> <input name="option_group" type="radio" value="{{ op3 }}">
-                                <span>C. {{ op3 }}</span>
+                            <label class="radio">
+                                <input id="opt3" name="user_opt" type="radio" value="opt3" {{ status }} {{ opt3_selected }}/>
+                                <span>C. {{ question.opt3 }}</span>
                             </label>
                         </div>
                         <div class="ans ml-2">
-                            <label class="radio"> <input name="option_group" type="radio" value="{{ op4 }}">
-                                <span>D. {{ op4 }}</span>
+                            <label class="radio">
+                                <input id="opt4" name="user_opt" type="radio" value="opt4" {{ status }} {{ opt4_selected }}/>
+                                <span>D. {{ question.opt4 }}</span>
                             </label>
                         </div>
                     </fieldset>
                 </form>
                 {% if messages %}
                     {% for message in messages %}
-                        <div class="alert alert-{{ message.tags }}">
+                        <div class="alert alert-{% if message.tags == 'error' %}danger{% else %}{{ message.tags }}{% endif %}">
                             {{ message }}
                         </div>
                     {% endfor %}
-                {% endif %}
-                <div class="d-flex flex-row justify-content-between align-items-center p-3 bg-white">
-                    <button class="btn btn-primary d-flex align-items-center btn-danger" type="button">
-                        <i class="fa fa-angle-left mt-1 mr-1"></i>
-                        Sebelumnya
-                    </button>
-                    <button class="btn btn-primary d-flex align-items-center btn-warning" type="submit" form="q_form">
-                        Hantar
-                    </button>
-                    <button class="btn btn-primary border-success align-items-center btn-success" type="button">
-                        Seterusnya
+                    <div class="d-flex flex-row justify-content-between align-items-center p-3 bg-white">
+                        <button class="btn btn-primary border-success align-items-center btn-success" type="submit" form="next_form" {% if page_now == page_total %} disabled{% endif %}>
+                            Seterusnya
                         <i class="fa fa-angle-right ml-2"></i>
-                    </button>
-                </div>
+                        </button>
+                    </div>
+                {% else %}
+                    <div class="d-flex flex-row justify-content-between align-items-center p-3 bg-white">
+                        <button id="pass_up_ans" class="btn btn-primary d-flex align-items-center btn-warning" type="submit" form="q_form">
+                            Hantar
+                        </button>
+                    </div>
+                {% endif %}
             </div>
         </div>
     </div>
 </div>
+<script src="{% static 'quiz/quiz.js' %}"></script>
 {% endblock content %}
