Change navigation bar (due to bug when not at home.html)

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -11,7 +11,7 @@
                 <hr class="divider my-4" />
             </div>
             <div class="col-lg-8 align-self-baseline">
-                <p class="text-white-75 font-weight-light mb-5">Asas Sains komputer ialah satu kajian terhadap asas teori maklumat dan pengiraan serta pelaksanaan dan penggunaannya dalam sistem komputer.</p>
+                <p class="text-white-75 font-weight-light mb-5">Asas Sains Komputer ialah satu kajian terhadap asas teori maklumat dan pengiraan serta pelaksanaan dan penggunaannya dalam sistem komputer.</p>
                 <a class="btn btn-primary btn-xl js-scroll-trigger" href="/curriculum/computational_thinking">Belajar sekarang</a>
             </div>
         </div>
@@ -43,7 +43,7 @@
                 <div class="mt-5">
                     <i class="fas fa-4x fa-lightbulb text-primary mb-4"></i>
                     <h3 class="h4 mb-2">Teknik Pemikiran Komputasional</h3>
-                    <p class="text-muted mb-0">Teknik-teknik asas untuk menyelesaiakn masalah berbantukan komputer.</p>
+                    <p class="text-muted mb-0">Teknik-teknik asas untuk menyelesaikan masalah berbantukan komputer.</p>
                 </div>
             </a>
             <a class="col-lg-3 col-md-6 text-center ca-item"  href="curriculum/data_representation">
@@ -56,7 +56,7 @@
             <a class="col-lg-3 col-md-6 text-center ca-item"  href="curriculum/algorithms">
                 <div class="mt-5">
                     <i class="fas fa-4x fa-project-diagram text-primary mb-4"></i>
-                    <h3 class="h4 mb-2">Algorithma</h3>
+                    <h3 class="h4 mb-2">Algoritma</h3>
                     <p class="text-muted mb-0">Perwakilan satu seri langkah dalam penyelesaian masalah dengan pseudokod dan carta alir.</p>
                 </div>
             </a>
