--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -39,16 +39,27 @@
                 aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto my-2 my-lg-0">
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/#intro"
-                                        style="{{ nav_text_styling|default:';' }}">Pengenalan</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/#curriculum"
-                                        style="{{ nav_text_styling|default:';' }}">Kurikulum</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/#careers"
-                                        style="{{ nav_text_styling|default:';' }}">Kerjaya</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/porfolio"
+                {% if home %}
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/#intro"
+                                            style="{{ nav_text_styling|default:';' }}">Pengenalan</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/#curriculum"
+                                            style="{{ nav_text_styling|default:';' }}">Kurikulum</a></li>
+                {% else %}
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/"
+                                        style="{{ nav_text_styling|default:';' }}">Utama</a></li>
+                {% endif %}
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/curriculum"
+                                        style="{{ nav_text_styling|default:';' }}">Blog</a></li>
+                {% if home %}
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/#careers"
+                                            style="{{ nav_text_styling|default:';' }}">Kerjaya</a></li>
+                {% endif %}
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/portfolio"
                                         style="{{ nav_text_styling|default:';' }}">Portfolio</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/#contact"
-                                        style="{{ nav_text_styling|default:';' }}">Hubungi Kami</a></li>
+                {% if home %}
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/#contact"
+                                            style="{{ nav_text_styling|default:';' }}">Hubungi Kami</a></li>
+                {% endif %}
             </ul>
         </div>
     </div>
