--- a/curriculum/templates/curriculum/code.html
+++ b/curriculum/templates/curriculum/code.html
@@ -71,7 +71,7 @@ IF...ELSE IF...ELSE = pelbagai pilihan
 <h3 class="code-line" data-line-start=93 data-line-end=94><a id="Kod_Arahan_HTML_93"></a>Kod Arahan HTML</h3>
 <p class="has-line-data" data-line-start="94" data-line-end="95">HTML merupakan singkatan bagi <strong><em>Hypertext Markup Language</em></strong>. Kod HTML boleh ditaip denggan menggunakan aplikasi Notepad dan disimpan dengan sambungan <strong>“.html”</strong> atau <strong>“.htm”</strong>.</p>
 <hr>
-<h4 class="code-line" data-line-start=98 data-line-end=99><a id="Melakar_papan_cerita_98"></a>Melakar papan cerita</h4>
+<h4 class="code-line" data-line-start=98 data-line-end=99><a id="Melakar_papan_cerita_98"></a>Melakar Papan Cerita</h4>
 <p class="has-line-data" data-line-start="99" data-line-end="100">Papan cerita ialah siri lakaran yang menggambarkan isi kandungan untuk setiap paparan skrin dalam laman sesawang.</p>
 <p class="has-line-data" data-line-start="101" data-line-end="102">Langkah-langkah melakar papan cerita ialah:</p>
 <ol>
@@ -122,7 +122,7 @@ IF...ELSE IF...ELSE = pelbagai pilihan
 <li class="has-line-data" data-line-start="149" data-line-end="150">Taipkan banner dalam tag <code>&lt;title&gt;&lt;/title&gt;</code></li>
 <li class="has-line-data" data-line-start="150" data-line-end="151">Taipkan <code>&lt;banner&gt;&lt;/banner&gt;</code> dalam tag <code>&lt;body&gt;&lt;/body&gt;</code></li>
 <li class="has-line-data" data-line-start="151" data-line-end="152">Taipkan kod arahan <code>&lt;img src=&quot;logo.jpeg&quot;&gt;</code> ke dalam <code>&lt;banner&gt;&lt;/banner&gt;</code>.</li>
-<li class="has-line-data" data-line-start="152" data-line-end="154">Klik <strong>File &gt; Save As</strong> dan pilih folder HTML serta tukar nama dokumen kepada <code>banner.html</code> dan <strong>Save</strong>.</li>
+<li class="has-line-data" data-line-start="152" data-line-end="154">Klik <strong>File &gt; Save As</strong> dan pilih folder HTML serta tukar nama dokumen kepada <code>banner.html</code> dan <strong>Save</strong></li>
 </ol>
 </li>
 </ul>
@@ -155,14 +155,14 @@ IF...ELSE IF...ELSE = pelbagai pilihan
 <li class="has-line-data" data-line-start="180" data-line-end="181">Taipkan kod arahan asas HTML</li>
 <li class="has-line-data" data-line-start="181" data-line-end="183">Taipkan kod seperti berikut:<br>
 <img src="{% static 'images/29.png' %}" alt=""></li>
-<li class="has-line-data" data-line-start="183" data-line-end="185">Klik <strong>File &gt; Save As</strong> untuk menyimpan dokumen sebagai fail HTML.</li>
+<li class="has-line-data" data-line-start="183" data-line-end="185">Klik <strong>File &gt; Save As</strong> untuk menyimpan dokumen sebagai fail HTML</li>
 </ol>
 <p class="has-line-data" data-line-start="185" data-line-end="186">Langkah-langkah membina pautan imej dalam HTML adalah seperti berikut:</p>
 <ol>
 <li class="has-line-data" data-line-start="186" data-line-end="187">Taipkan kod arahan asas HTML</li>
 <li class="has-line-data" data-line-start="187" data-line-end="189">Taipkan kod seperti berikut<br>
 <img src="{% static 'images/30.png' %}" alt=""></li>
-<li class="has-line-data" data-line-start="189" data-line-end="191">Klik <strong>File &gt; Save As</strong> untuk menyimpan dokumen sebagai fail HTML.</li>
+<li class="has-line-data" data-line-start="189" data-line-end="191">Klik <strong>File &gt; Save As</strong> untuk menyimpan dokumen sebagai fail HTML</li>
 </ol>
 <hr>
 <h4 class="code-line" data-line-start=193 data-line-end=194><a id="Memasukkan_Imej_dalam_HTML_193"></a>Memasukkan Imej dalam HTML</h4>
@@ -172,7 +172,7 @@ IF...ELSE IF...ELSE = pelbagai pilihan
 <li class="has-line-data" data-line-start="196" data-line-end="197">Pilih satu imej dan namakan sebagai <code>imej.jpeg</code></li>
 <li class="has-line-data" data-line-start="197" data-line-end="199">Taipkan kod seperti di bawah:<br>
 <img src="{% static 'images/31.png' %}" alt=""></li>
-<li class="has-line-data" data-line-start="199" data-line-end="201">Klik <strong>File &gt; Save As</strong> untuk menyimpan dokumen sebagai fail HTML.</li>
+<li class="has-line-data" data-line-start="199" data-line-end="201">Klik <strong>File &gt; Save As</strong> untuk menyimpan dokumen sebagai fail HTML</li>
 </ol>
 <hr>
 <h4 class="code-line" data-line-start=203 data-line-end=204><a id="_Pulldown_menu__dalam_HTML_203"></a><em>Pull-down menu</em> dalam HTML</h4>
