--- a/curriculum/templates/curriculum/data_r.html
+++ b/curriculum/templates/curriculum/data_r.html
@@ -7,7 +7,7 @@
 <li class="has-line-data" data-line-start="1" data-line-end="2">sistem nombor perduaan (sistem <strong>binari</strong>)</li>
 <li class="has-line-data" data-line-start="2" data-line-end="3">sistem nombor perlapanan (sistem <strong>oktal</strong>)</li>
 <li class="has-line-data" data-line-start="3" data-line-end="4">sistem nombor perpuluhan (sistem <strong>desimal</strong>)</li>
-<li class="has-line-data" data-line-start="4" data-line-end="6">sistem nombor perenambelasan (sistem <strong>hexadesimal</strong>)</li>
+<li class="has-line-data" data-line-start="4" data-line-end="6">sistem nombor perenambelasan (sistem <strong>heksadesimal</strong>)</li>
 </ul>
 <hr>
 <h3 class="code-line" data-line-start=8 data-line-end=9><a id="Sistem_Nombor_Perduaan_8"></a>Sistem Nombor Perduaan</h3>
@@ -99,13 +99,13 @@ Terdapat dua jenis saluran audio iaitu:</p>
 <li class="has-line-data" data-line-start="91" data-line-end="92"><strong><em>MPEG Layer III (MP3)</em></strong></li>
 <li class="has-line-data" data-line-start="92" data-line-end="94"><strong><em>Musical Instrument Digital Interface (MIDI)</em></strong></li>
 </ol>
-<h3 class="code-line" data-line-start=94 data-line-end=95><a id="Penukaran_Saiz_Data_dari_Bit_ke_Bait_KilobaitMegabaitGigabait_dan_Terabait_bagi_Fail_Audio_dan_Imej_94"></a>Penukaran Saiz Data dari Bit ke Bait, Kilobait,Megabait,Gigabait dan Terabait bagi Fail Audio dan Imej</h3>
+<h3 class="code-line" data-line-start=94 data-line-end=95><a id="Penukaran_Saiz_Data_dari_Bit_ke_Bait_KilobaitMegabaitGigabait_dan_Terabait_bagi_Fail_Audio_dan_Imej_94"></a>Penukaran Saiz Data dari Bit ke Bait, Kilobait, Megabait, Gigabait dan Terabait bagi Fail Audio dan Imej</h3>
 <p class="has-line-data" data-line-start="95" data-line-end="96">Unit data terkecil bagi komputer ialah <strong>bit</strong>. Unit storan data ialah <strong>bit</strong>, <strong>bait</strong>, <strong>kilobait (KB)</strong>, <strong>megabait (MB)</strong>, <strong>gigabait (GB)</strong> dan <strong>terabait (TB)</strong>.</p>
 <pre><code class="has-line-data" data-line-start="97" data-line-end="103">1 bait = 1 bit
 1 kilobit = 1024 bit
-1 megabit = 1024 bit
-1 gigabit = 1024 bit
-1 terabit = 1024 bit
+1 megabit = 1024 kilobit
+1 gigabit = 1024 megabit
+1 terabit = 1024 gigabit
 </code></pre>
 <p class="has-line-data" data-line-start="104" data-line-end="106">Saiz fail audio digital boleh dikira dengan cara:<br>
 <img src="{% static 'images/12.png' %}" alt=""></p>
