--- a/curriculum/templates/curriculum/comp_t.html
+++ b/curriculum/templates/curriculum/comp_t.html
@@ -8,7 +8,7 @@ Terdapat 4 teknik yang akan kita belajar semsa tingkatan 1, 2 dan 3.</p>
 <hr>
 <h3 class="code-line" data-line-start=11 data-line-end=12><a id="Teknik_Leraian__decomposition__11"></a>Teknik Leraian <em>(decomposition)</em></h3>
 <p class="has-line-data" data-line-start="12" data-line-end="13"><img src="{% static 'images/1.png' %}" alt=""></p>
-<p class="has-line-data" data-line-start="14" data-line-end="15"><strong>Pemecahan suatu masalah</strong> atau sistem yang kompleks kepada bahagian-bahagian yang lebih kecil. Dengan ini, kits dapat kita <strong>memahami sesuatu proses kerja dengan lebih mudah</strong>.</p>
+<p class="has-line-data" data-line-start="14" data-line-end="15"><strong>Pemecahan suatu masalah</strong> atau sistem yang kompleks kepada bahagian-bahagian yang lebih kecil. Dengan ini, kita dapat kita <strong>memahami sesuatu proses kerja dengan lebih mudah</strong>.</p>
 <hr>
 <h3 class="code-line" data-line-start=18 data-line-end=19><a id="Teknik_Pengecaman_Corak__pattern_recognition__18"></a>Teknik Pengecaman Corak <em>(pattern recognition)</em></h3>
 <p class="has-line-data" data-line-start="19" data-line-end="20"><img src="{% static 'images/2.png' %}" alt=""></p>
