--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -48,7 +48,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/"
                                         style="{{ nav_text_styling|default:';' }}">Utama</a></li>
                 {% endif %}
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/curriculum"
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/curriculum/computational_thinking"
                                         style="{{ nav_text_styling|default:';' }}">Blog</a></li>
                 {% if home %}
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/#careers"
