Add download link(s) for external resource(s)

--- a/curriculum/templates/curriculum/base.html
+++ b/curriculum/templates/curriculum/base.html
@@ -70,6 +70,7 @@
                 <div class="card-body">
                     <div class="row" style="padding-left: 20px;">
                         <ul class="list-unstyled mb-0">
+                            <p>Pembelajaran</p>
                             <li>
                                 <a href="/curriculum/computational_thinking">Teknik Pemikiran Komputasional</a>
                             </li>
@@ -86,6 +87,11 @@
 <!--                            <li>-->
 <!--                                <a href="#">Kalkulator Penukaran Asas</a>-->
 <!--                            </li>-->
+                            <hr>
+                            <p>Maklumat Tambahan</p>
+                            <li>
+                                <a href="{% static 'images/DSKP KSSM Tingkatan 1 Asas Sains Komputer.pdf' %}" download="">DSKP KSSM Tingkatan 1 ASK</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
