--- a/curriculum/templates/curriculum/code.html
+++ b/curriculum/templates/curriculum/code.html
@@ -38,7 +38,7 @@ IF...ELSE IF...ELSE = pelbagai pilihan
 <li class="has-line-data" data-line-start="41" data-line-end="42"><strong>Reka bentuk program</strong></li>
 <li class="has-line-data" data-line-start="42" data-line-end="43"><strong>Pengekodan</strong></li>
 <li class="has-line-data" data-line-start="43" data-line-end="44"><strong>Pengujian dan penyahpepijatan</strong></li>
-<li class="has-line-data" data-line-start="44" data-line-end="46"><strong>Dokumentasi</strong>.</li>
+<li class="has-line-data" data-line-start="44" data-line-end="46"><strong>Dokumentasi</strong></li>
 </ol>
 <hr>
 <h4 class="code-line" data-line-start=48 data-line-end=49><a id="Analisis_masalah_48"></a>Analisis masalah</h4>
@@ -140,12 +140,12 @@ IF...ELSE IF...ELSE = pelbagai pilihan
 <p class="has-line-data" data-line-start="165" data-line-end="166">Menu boleh dibina mengikut langkah berikut:</p>
 <ol>
 <li class="has-line-data" data-line-start="166" data-line-end="167">Taipkan kod arahan asas HTML</li>
-<li class="has-line-data" data-line-start="167" data-line-end="168">Taipkan <code>menu1</code> dalam tag <code>&lt;title&gt;&lt;/title&gt;</code> dan klik <strong>File&gt;Save As</strong> <code>Menu1.html</code></li>
+<li class="has-line-data" data-line-start="167" data-line-end="168">Taipkan <code>menu1</code> dalam tag <code>&lt;title&gt;&lt;/title&gt;</code> dan klik <strong>File > Save As</strong> <code>Menu1.html</code></li>
 <li class="has-line-data" data-line-start="168" data-line-end="169">Tukar <code>Menu1</code> kepada <code>Menu2</code> dan simpan sebagai <code>Menu2.html</code>.</li>
 <li class="has-line-data" data-line-start="169" data-line-end="170">Ulang langkah 2 dan 3 untuk hasilkan <code>Menu3.html</code> dan <code>Menu4.html</code>.</li>
 <li class="has-line-data" data-line-start="170" data-line-end="172">Buka file baharu dan tuliskan kod arahan di bawah:<br>
 <img src="{% static 'images/28.png' %}" alt=""></li>
-<li class="has-line-data" data-line-start="172" data-line-end="174">Klik <strong>File &gt; Save As</strong> dan pilih folder HTML serta tukar nama dokumen kepada <code>menu.html</code> dan <strong>Save</strong>.</li>
+<li class="has-line-data" data-line-start="172" data-line-end="174">Klik <strong>File &gt; Save As</strong> dan pilih folder HTML serta tukar nama dokumen kepada <code>menu.html</code> dan <strong>Save</strong></li>
 </ol>
 <hr>
 <h4 class="code-line" data-line-start=176 data-line-end=177><a id="Pautan_teks__hyperlink__dan_imej_dalam_HTML_176"></a>Pautan teks <em>(hyperlink)</em> dan imej dalam HTML</h4>
@@ -190,12 +190,12 @@ IF...ELSE IF...ELSE = pelbagai pilihan
 <img src="{% static 'images/32.png' %}" alt=""></li>
 <li class="has-line-data" data-line-start="215" data-line-end="217">Ulangi tag <code>&lt;option&gt;&lt;/option&gt;</code> untuk 5 jenis buah yang lain seperti ditunjukkan di bawah:<br>
 <img src="{% static 'images/33.png' %}" alt=""></li>
-<li class="has-line-data" data-line-start="217" data-line-end="219">Klik <strong>File &gt; Save As</strong> untuk menyimpan dokumen sebagai fail HTML.</li>
+<li class="has-line-data" data-line-start="217" data-line-end="219">Klik <strong>File &gt; Save As</strong> untuk menyimpan dokumen sebagai fail HTML</li>
 </ol>
 <hr>
 <h4 class="code-line" data-line-start=221 data-line-end=222><a id="Ruang_Komen_dalam_HTML_221"></a>Ruang Komen dalam HTML</h4>
 <ul>
-<li class="has-line-data" data-line-start="222" data-line-end="225">Ruang komen bertujuan untuk membolehkan pengunjung memberi maklum balas.<br>
+<li class="has-line-data" data-line-start="222" data-line-end="225">Ruang komen bertujuan untuk membolehkan pengunjung memberi maklum balas<br>
 <img src="{% static 'images/34.png' %}" alt=""></li>
 </ul>
 <hr>
