--- a/portfolio/templates/portfolio/home.html
+++ b/portfolio/templates/portfolio/home.html
@@ -22,16 +22,16 @@
             <p>Terdapat dua makmal komputer yang dilengkapi dengan pelbagai fasiliti di SMKTBP.</p>
             <h3 class="my-3">Dilengkapi dengan:</h3>
             <ul>
-                <li>40 buah kmputer</li>
+                <li>40 buah komputer</li>
                 <li>Pendingin hawa</li>
                 <li>Pelayan laman web sekolah</li>
-                <li>Mesin pencetak</li>
+                <li>Pencetak</li>
             </ul>
         </div>
     </div>
     <hr>
     <!-- Teachers -->
-    <h2 class="my-4">Guru Mata Pelajaran Asas Sains Komputer</h2>
+    <h2 class="my-4">Guru-guru Mata Pelajaran Asas Sains Komputer</h2>
     <!-- Teacher One -->
     <div class="row">
         <div class="col-md-7 img-container">
@@ -41,7 +41,7 @@
         </div>
         <div class="col-md-5">
             <h3 class="cap">Pn. Mariatie binti Sidek</h3>
-            <p>Guru opsyen Teknologi Maklumat yang berpengalaman 3 tahun dalam pengajaran Asas Sains Komputer. Beliau merupakan seorang guru yang sabar, penyayang dan berpengetahuan dalam. Dengan usaha beliau, SMKTBP telah mencapai keputusan yang cemerlang dalam mata pelajaran ini.</p>
+            <p>Guru opsyen Teknologi Maklumat yang berpengalaman 3 tahun dalam pengajaran Asas Sains Komputer. Beliau merupakan seorang guru yang sabar, penyayang dan berpengetahuan dalam. Dengan usaha beliau, pelajar-pelajar telah mencapai keputusan yang cemerlang dalam PT3.</p>
             <div class="row">
                 <div class="col">
                     <p class="cap"><strong>Pencapaian Akademik</strong></p>
@@ -78,7 +78,7 @@
         </div>
         <div class="col-md-5">
             <h3 class="cap">Pn. Rusyawati binti Abd. Manaf</h3>
-            <p>Guru opsyen Teknologi Maklumat yang mengajar selama 3 tahun dalam Asas Sains Komputer Tingkatan 1 dan 3. Beliau merupakan seorang guru yang sabar, penyayang dan berpengetahuan dalam. Keperibadiannya yang berdedikasi dalam pengajaran telah mempimpin beratus-ratusan pelajar untuk menerusi pelajaran dalam Sains Komputer semasa Tingkatan 4.</p>
+            <p>Guru opsyen Teknologi Maklumat yang mengajar selama 3 tahun dalam Asas Sains Komputer Tingkatan 1 dan 3. Keperibadian beliau yang berdedikasi dalam pengajaran telah mempimpin beratus-ratus pelajar untuk menerusi pelajaran dalam Sains Komputer semasa Tingkatan 4.</p>
             <div class="row">
                 <div class="col">
                     <p class="cap"><strong>Pencapaian Akademik</strong></p>
