--- a/quiz/templates/quiz/base.html
+++ b/quiz/templates/quiz/base.html
@@ -25,7 +25,7 @@
                     <input name="load_next" type="hidden" value="{% if messages %}1{% else %}0{% endif %}"/>
                     <div class="d-flex flex-row align-items-center question-title">
                         <h3 class="text-danger">S{{ page }}.</h3>
-                        <h5 class="mt-1 ml-2">{{ question.statement }}</h5>
+                        <h5 class="mt-1 ml-2">{{ question.statement|linebreaksbr }}</h5>
                     </div>
                     <fieldset id="user_opt">
                         <div class="ans ml-2">
@@ -62,9 +62,9 @@
                     {% endfor %}
                     <div class="d-flex flex-row justify-content-between align-items-center p-3 bg-white">
                         {% if page == page_total %}
-                            <button class="btn btn-primary border-success align-items-center btn-danger">
+                            <a class="btn btn-primary border-success align-items-center btn-danger" href="/">
                                 Tamat
-                            </button>
+                            </a>
                         {% else %}
                             <button class="btn btn-primary border-success align-items-center btn-success" type="submit" form="q_form">
                                 Seterusnya
