--- a/curriculum/templates/curriculum/base_c.html
+++ b/curriculum/templates/curriculum/base_c.html
@@ -15,5 +15,5 @@
         <span class="input-group-text" id="basic-addon2">asas 2</span>
     </div>
 </div>
-<div id="error-msg" class="alert alert-danger" style="display: none;">No no</div>
+<div id="error-msg" class="alert alert-danger" style="display: none;"></div>
 {% endblock material %}
